feat: add ability to get last completed scenario attempt
